Add branch requirement for calling GetCommitByName endpoint
