# pkg/swagger-ui/swagger.json
@@ -91,18 +91,19 @@
         }
       }
     },
-    "/{owner}/{repo}/commit/getCommitByMessage": {
+    "/{owner}/{repo}/commit/getCommitByName": {
       "get": {
         "tags": ["commit"],
         "summary": "Accepts a message about commit. Provides commit id and name.",
-        "operationId": "getCommitByMessage",
+        "operationId": "getCommitByName",
         "parameters": [
           {
             "type": "string",
             "x-go-name": "Message",
             "description": "Message",
             "name": "message",
-            "in": "query"
+            "in": "query",
+            "required": true
           },
           {
             "type": "string",
@@ -119,11 +120,19 @@
             "name": "repo",
             "in": "path",
             "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "Branch",
+            "description": "Branch name",
+            "name": "branch",
+            "in": "query",
+            "required": true
           }
         ],
         "responses": {
           "200": {
-            "$ref": "#/responses/GetCommitByMessageResponse"
+            "$ref": "#/responses/GetCommitByNameResponse"
           }
         }
       }
@@ -403,7 +412,7 @@
       },
       "x-go-package": "git-service/pkg/handler"
     },
-    "GetCommitByMessageResp": {
+    "GetCommitByNameResp": {
       "type": "object",
       "x-go-package": "git-service/pkg/handler"
     },
@@ -497,7 +506,7 @@
     "GetCommitsBeforeResponse": {
       "description": "",
       "schema": {
-        "$ref": "#/definitions/GetCommitByMessageResp"
+        "$ref": "#/definitions/GetCommitByNameResp"
       }
     },
     "GetJobsByCommitResponse": {
